# mailgun-rust-sdk-async

./: Cargo.toml  README.md
src/: client.rs  lib.rs
src/endpoints/: get_bounces.rs  get_complaints.rs  get_events.rs  get_stats.rs  get_unsubscribes.rs  get_whitelists.rs  send_message.rs
