[package]
name = "mailgun-sdk-async"
version = "0.2.0"
authors = ["Ron Rider Jr. <rideron89@gmail.com>", "Wesley Moore <wes@wezm.net>"]
description = "Async MailGun API client written in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/wezm/mailgun-rust-sdk-async.git"
homepage = "https://github.com/wezm/mailgun-rust-sdk-async"
#documentation = "https://docs.rs/mailgun-sdk/0.1.1/"
categories = ["api-bindings"]
edition = "2018"

# Files to include in the upload to crates.io.
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[dependencies]
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
dotenv = "0.15"
tokio = "1.29.1"
